--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Oswald', sans-serif;
+    margin: 0;
 }
 h1{
     font-size: 50px;
@@ -14,5 +15,21 @@ h1{
     padding: 2%;
 }
 .halp img{
-    width: 100%;
+    width: 50%;
+    float: right;
+}
+.top-banner{
+    background-image: url("top-banner2.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, lightsalmon, tomato);
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 700;
 }
