--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body{
-    font-family: 'Oswald', sans-serif;
-    margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 h1{
     font-size: 50px;
@@ -8,32 +7,12 @@ h1{
 .name-highlight{
     color: orange;
 }
-.halp{
+.halp-width{
     width: 40%;
     float: left;
-    margin: 3%;
-    padding: 2%;
-}
-.halp img{
-    width: 80%;
-    float: right;
-}
-.top-banner{
-    background-image: url("top-banner2.png");
-    background-repeat: no-repeat;
-}
-section{
-    height: 500px;
-}
-.link-button{
-    text-decoration: none;
-    background-image: linear-gradient(45deg, lightsalmon, tomato);
-    padding: 10px 20px;
-    border-radius: 5px;
-    color: white;
-    font-weight: 700;
+    margin-left: 5%;
+    padding-left: 2%;
 }
 .halp-width img{
-    width: 40%;
-    float: left;
+    width: 70%;
 }
