--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
 body{
+    margin: 0;
     font-family: 'Roboto', sans-serif;
 }
 h1{
     font-size: 50px;
 }
-.name-highlight{
+h2{
+    font-size: 40px;
+}
+p{
+    color: dimgrey;
+}
+.orange-highlight{
     color: orange;
 }
 .halp-width{
@@ -14,5 +21,49 @@ h1{
     padding-left: 2%;
 }
 .halp-width img{
-    width: 70%;
+    width: 65%;
+}
+.pot-banner{
+    background-image: url("banner1.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+    padding-bottom: 150px;
+}
+.button-link{
+    text-decoration: none;
+    background-image: -moz-repeating-linear-gradient(45deg, lightsalmon,tomato);
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 700;
+}
+.dream-area{
+    background-image: url("side1.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.single-ecperience{
+    box-shadow: 10px 10px 40px grey;
+    border-radius: 10px;
+    height: 80%;
+}
+.experience-area{
+    background-image: url("side2.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, lightsalmon, tomato);
+    border-image-slice: 1;
+}
+#baby-web{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, blue, cyan);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
